# homelinux

./: .gitignore  .travis.yml  AUTHORS.txt  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  Makefile  README.md  autogen.sh  configure  configure.ac  index.html  index.js  package.json  params.json  prefix.json  svconfig.example  userconf.json
autotools/: COPYING  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  extern-deps
autotools/m4/: ax_check_compile_flag.m4
cmake/: macros.cmake  unittest-macros.cmake
compilers/: cc
configs/: homelinux.json  userConfig.json
dev/: build_and_test_on_distributions.py  podman-build-image.sh  podman-run-container.sh  update-version.sh
dev/gentoo-pkg-converter/: README.md  converter.sh  ebuild-extractor.sh  eclass-override.sh  main.js  package.json
dev/gentoo-pkg-converter/sandbox/: configure  ln
doc/: concepts.md  config.md  creating-packages.md  package.md  packages.md  paper-draft.md  quickpackage.md
extern-deps/: CMakeLists.txt
extern-deps/gmock-1.7.0/gtest/: configure
extern-deps/re2-2017-06-01/: CMakeLists.txt  Makefile.am
extern-deps/re2-2017-06-01/re2/: Makefile.am
extern-deps/re2-2017-06-01/util/: Makefile.am
homelinux/: main.py
homelinux/lib/: UserConfig.py  Version.py  VersionMatcher.py  __init__.py
homelinux/lib/core/: Colors.py  EnvSetup.py  PackageDef.py  UseFlags.py  UserConfig.py  Version.py  VersionMatcher.py  __init__.py
homelinux/tests/: TestUserConfig.py  TestVersion.py  TestVersionMatcher.py
homelinux/tests/core/: TestEnvSetup.py  TestUseFlags.py  TestUserConfig.py  TestVersion.py  TestVersionMatcher.py
homelinux/tests/data/: userconfig.json
lib/svhomelinux/: svcommon.sh  svpack-basic.sh  svpack-gitlatest.sh  svpack-virtual.sh
libs/: DbManager.js  DepsLoader.js  EnvSetup.js  HomeLinux.js  HomeLinuxManager.js  HostPkgChecker.js  PackageBuilder.js  Prefix.js  QuickPackage.js  UseFlags.js  UserConfig.js  VersionFetcher.js  VersionHelper.js
libs/providers/: Debian.js  Gentoo.js  Github.js  HomeLinux.js  Models.js  Urls.js
manpages/: Makefile  Makefile.am  Makefile.in  hl-config.5  hl-config.5.bz2  hl-config.5.html  hl-config.5.ronn  hl.1  hl.1.bz2  hl.1.html  hl.1.ronn  hl.ronn  index.txt
share/svhomelinux/: distfiles.extra  quickpackages.configure  quickpackages.deps  quickpackages.patches  quickpackages.slots  quickpackages.variant  quickpackages.version  svconfig.example
share/svhomelinux/distfiles/: README.txt
share/svhomelinux/env/: README.txt
share/svhomelinux/installed/: README.txt
share/svhomelinux/patches/: README.txt  inkscape-0.48.1-disable-lcms.patch  kdiff3-0.3.95-disable-doc.patch
src/: CMakeLists.txt  HomeLinux.cpp  HomeLinux.hpp  Makefile.am  Makefile.in  config-autotools.h.in  config.h.in  main.cpp
src/base/: CMakeLists.txt  Colors.hpp  Config.cpp  Config.hpp  Debug.cpp  Debug.hpp  FormattedMessage.cpp  FormattedMessage.hpp  Helper.cpp  Helper.hpp  Makefile.am  Makefile.in
src/base/tests/: CMakeLists.txt  TestConfig.cpp  TestDebug.cpp  TestFormattedMessage.cpp  TestHelper.cpp
src/base/tests/data/: config.json
src/core/: CMakeLists.txt  DepLoader.cpp  DepLoader.hpp  EnvSetup.cpp  EnvSetup.hpp  HostPkgChecker.cpp  HostPkgChecker.hpp  Makefile.am  Makefile.in  PackageDef.cpp  PackageDef.hpp  PackageRequest.cpp  PackageRequest.hpp  Prefix.cpp  Prefix.hpp  QuickPackage.cpp  QuickPackage.hpp  UseFlags.cpp  UseFlags.hpp  VersionMatcher.cpp  VersionMatcher.hpp
src/core/tests/: CMakeLists.txt  TestDepLoader.cpp  TestEnvSetup.cpp  TestPackageDef.cpp  TestPackageRequest.cpp  TestPrefix.cpp  TestQuickPackage.cpp  TestUseFlags.cpp  TestVersionMatcher.cpp
src/core/tests/data/: addPrefix.txt  deploader-full-bash-p-makefile.sh  deploader-full-bash.sh  full-get-package-bash.json  gen-pack-bash-no-parallel.sh  homelinux.json  quick-package-empty.json  quick-package-test.json  removeExisting.txt  spec-inherit.json  spec-merged.json  spec-specific.json  spec.json  user-homelinux.json
src/crawler/: CMakeLists.txt  Crawler.cpp  Crawler.hpp  CrawlerDummy.hpp  CrawlerFtp.cpp  CrawlerFtp.hpp  CrawlerGnomeCache.cpp  CrawlerGnomeCache.hpp
src/crawler/tests/: CMakeLists.txt  TestCrawlerDummy.cpp  TestCrawlerFtp.cpp  TestCrawlerGithub.cpp  TestCrawlerGnomeCache.cpp
src/crawler/tests/data/: homelinux
src/crawlers/: CMakeLists.txt  Crawler.cpp  Crawler.hpp  CrawlerDummy.cpp  CrawlerDummy.hpp  CrawlerFtp.cpp  CrawlerFtp.hpp  CrawlerGentoo.cpp  CrawlerGentoo.hpp  CrawlerGithub.cpp  CrawlerGithub.hpp  CrawlerGnomeCache.cpp  CrawlerGnomeCache.hpp  CrawlerHtml.cpp  CrawlerHtml.hpp  Makefile.am  Makefile.in
src/crawlers/html-link-extractor/: index.html  index.js  package-lock.json  package.json
src/crawlers/tests/: CMakeLists.txt  TestCrawlerDummy.cpp  TestCrawlerFtp.cpp  TestCrawlerGentoo.cpp  TestCrawlerGithub.cpp  TestCrawlerGnomeCache.cpp  TestCrawlerHtml.cpp
src/crawlers/tests/data/: homelinux.json
src/hosts/: CMakeLists.txt
src/portability/: CMakeLists.txt  Makefile.am  Makefile.in  Mutex.cpp  Mutex.hpp  Regexp.cpp  Regexp.hpp  System.cpp  System.hpp
src/portability/tests/: CMakeLists.txt  TestRegexp.cpp  TestSystem.cpp
src/portability/tests/data/: test.json
src/providers/: CMakeLists.txt  Makefile.am  Makefile.in  Provider.cpp  Provider.hpp  ProviderDebian.cpp  ProviderDebian.hpp  ProviderGentoo.cpp  ProviderGentoo.hpp  ProviderGithub.cpp  ProviderGithub.hpp  ProviderHomelinux.cpp  ProviderHomelinux.hpp  ProviderModels.cpp  ProviderModels.hpp  ProviderUrls.cpp  ProviderUrls.hpp
src/providers/tests/: CMakeLists.txt  TestProviderDebian.cpp  TestProviderGentoo.cpp  TestProviderGithub.cpp  TestProviderHomelinux.cpp  TestProviderModels.cpp  TestProviderUrls.cpp
src/providers/tests/data/: debian-full-cmake.json  gentoo-full-csh.json  github-full-dash.json  hl-full-bash.json  homelinux  homelinux.json  url-full-dash.json
tests/: UseFlags.js  VersionHelper.js
tools/gentoo-pkg-converter/: ebuild-extractor.sh  eclass-override.sh  main.js  package.json
tools/gentoo-pkg-converter/sandbox/: tee
variants/: README.txt
variants/none/: README.txt
(+3 files in other folders)
