noinst_LIBRARIES = libproviders.a
libproviders_a_SOURCES = Provider.cpp ProviderDebian.cpp ProviderGentoo.cpp ProviderGithub.cpp ProviderHomelinux.cpp ProviderModels.cpp ProviderUrls.cpp
libproviders_a_CPPFLAGS = -I$(srcdir)/../ -I$(srcdir)/../../extern-deps/jsoncpp/dist -I$(srcdir)/../../extern-deps/re2-2017-06-01/ -DHOMELINUX_VERSION="@HOMELINUX_VERSION@"