noinst_LIBRARIES = libre2.a
libre2_a_SOURCES = bitstate.cc compile.cc dfa.cc filtered_re2.cc mimics_pcre.cc nfa.cc onepass.cc parse.cc perl_groups.cc prefilter.cc prefilter_tree.cc prog.cc re2.cc regexp.cc set.cc simplify.cc stringpiece.cc tostring.cc unicode_casefold.cc unicode_groups.cc
libre2_a_CPPFLAGS = -I$(srcdir)/../