######################################################
#            PROJECT  : homelinux                    #
#            VERSION  : 2.0.0-dev                    #
#            DATE     : 06/2017                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

######################################################
noinst_LIBRARIES = libre2util.a
libre2util_a_SOURCES = rune.cc strutil.cc
libre2util_a_CPPFLAGS = -I$(srcdir)/../